Inicio da contrução do body: subtítulo e sections

--- a/dia-4-html-css-semantica/index.html
+++ b/dia-4-html-css-semantica/index.html
@@ -8,7 +8,18 @@
         h1 {
             text-align: center;
         }
+        
+        li{
+            display: inline-block;
+            width: 200px;
+            height: 100px;
+            margin-right: 100px;
+            text-align: center;
+        }
 
+        h2 {
+            text-align: center;
+        }
 
 
 
@@ -22,6 +33,26 @@
 
 <header>
     <h1> Soco a 80km/h: Conheça o Stomatopoda.</h1>
+
+    <nav>
+        <ul>
+            <li> Página Inicial</li>
+            <li> Sobre</li>
+            <li> Contato</li>
+        </ul>
+    </nav>
+
+    <main>
+        <section> 
+            <h2> Fatos sobre o Stomatopoda </h2>
+
+
+
+
+        </section>
+
+
+    </main>
 
 
 </header>
