inserção da imagem do crustaceo

--- a/dia-4-html-css-semantica/index.html
+++ b/dia-4-html-css-semantica/index.html
@@ -42,20 +42,26 @@
         </ul>
     </nav>
 
+</header>
+
     <main>
         <section> 
             <h2> Fatos sobre o Stomatopoda </h2>
 
-
-
-
         </section>
+        <p> O camarão mantis ou camarão-louva-deus-palhaço é um dos animais com um dos mais fortes socos de todo o planeta.<br>
+             Esse artrópode que possui pouco menos de 12 centímetros é capaz de quebrar conchas e até vidros de aquário com seus membros,<br> 
+             sendo um dos animais proporcionalmente mais fortes de todo o mundo.
+        </p>
+
+        <img src="https://www.hypeness.com.br/1/2021/08/5866c56a-gettyimages-1142086018-768x512.jpg" alt="camarao foto" width="200px">
+
 
 
     </main>
 
 
-</header>
+
   
   </body>
 </html>
