Término da primeira sessão do corpo do texto

--- a/dia-4-html-css-semantica/index.html
+++ b/dia-4-html-css-semantica/index.html
@@ -13,7 +13,7 @@
             display: inline-block;
             width: 200px;
             height: 100px;
-            margin-right: 100px;
+            margin-right: 50px;
             text-align: center;
         }
 
@@ -21,7 +21,10 @@
             text-align: center;
         }
 
-
+      #foto-camarao {
+        width: 400px;
+        margin-left: 250px;
+      }
 
 
 
@@ -48,13 +51,31 @@
         <section> 
             <h2> Fatos sobre o Stomatopoda </h2>
 
-        </section>
+        
         <p> O camarão mantis ou camarão-louva-deus-palhaço é um dos animais com um dos mais fortes socos de todo o planeta.<br>
              Esse artrópode que possui pouco menos de 12 centímetros é capaz de quebrar conchas e até vidros de aquário com seus membros,<br> 
              sendo um dos animais proporcionalmente mais fortes de todo o mundo.
         </p>
 
-        <img src="https://www.hypeness.com.br/1/2021/08/5866c56a-gettyimages-1142086018-768x512.jpg" alt="camarao foto" width="200px">
+        <img src="https://www.hypeness.com.br/1/2021/08/5866c56a-gettyimages-1142086018-768x512.jpg" id="foto-camarao" alt="camarao foto">
+
+            <h3> Descrição Geral</h3>
+
+            <p> O nome científico deste interessante artrópode é <i> Odontodactylus scyllarus</i>.</p>
+
+            <table> Reino: Animalia </table>
+            <table> Filo: Arthropoda  </table>
+            <table> Subfilo: Crustacea</table>
+            <table> Classe: Malacostraca</table>
+            <table> Subclasse; Hoplocarida</table>
+            <table> Ordem: Stomatopoda</table>
+            
+        </section>
+
+        <section>
+            <h3> Curiosidades: </h3>
+
+        </section>
 
 
 
